--- a/examples/eventstreamsadminv1/topic.yaml
+++ b/examples/eventstreamsadminv1/topic.yaml
@@ -6,5 +6,25 @@ spec:
   forProvider:
     name: mytopic
     kafkaAdminUrl: https://hxp8rfdvm2k0jr9k.svc09.us-south.eventstreams.cloud.ibm.com
+    partitions: 1
+    configs: 
+      -
+        name: cleanup.policy
+        value: compact
+      # -
+      #   name: segment.ms
+      #   value: '86400002'
+      -
+        name: retention.bytes
+        value: '104857599'
+      # -
+      #   name: retention.ms
+      #   value: '86400002'
+      -
+        name: segment.bytes
+        value: '536870822'
+      -
+        name: segment.index.bytes
+        value: '102422'
   providerConfigRef:
     name: ibm-cloud
