update cloudantdb client test and controller client and controller test
Signed-off-by: Daniel Reimer <daniel.reimer@ibm.com>

--- a/examples/resourcecontrollerv2/resource-instance-cloudant.yaml
+++ b/examples/resourcecontrollerv2/resource-instance-cloudant.yaml
@@ -7,7 +7,7 @@ spec:
     name: mycloudant
     target: us-south
     serviceName: cloudantnosqldb
-    resourcePlanName: standard
+    resourcePlanName: lite
     tags:
       - dev
   providerConfigRef:
