Documentation updates, added a Selector for the nameRef and fixed some examples. Most stuff request by the upstream owner
Signed-off-by: Harry Stavropoulos <hstavrop@us.ibm.com>

--- a/examples/cos/bucket_config/full_spec.yaml
+++ b/examples/cos/bucket_config/full_spec.yaml
@@ -8,7 +8,9 @@ spec:
   deletionPolicy: Orphan
   forProvider:
     name:
-    nameRef: configurable-1
+    nameRef: 
+      name: configurable-1
+    nameSelector:
     hardQuota: 201
     metricsMonitoring:
       usageMetricsEnabled: true
